--- a/dashboard/index.html
+++ b/dashboard/index.html
@@ -3,28 +3,243 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Dashboard</title>
+    <title>Sensor Dashboard</title>
+    <style>
+        :root {
+            color-scheme: light dark;
+            --transition-duration: 0.3s;
+            --font-stack: 'Inter', system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', sans-serif;
+            --border-radius: 16px;
+            --shadow: 0 12px 32px rgba(0, 0, 0, 0.12);
+        }
+
+        body {
+            font-family: var(--font-stack);
+            margin: 0;
+            min-height: 100vh;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            transition: background-color var(--transition-duration) ease, color var(--transition-duration) ease;
+        }
+
+        body[data-theme='light'] {
+            background: linear-gradient(145deg, #f5f7fa 0%, #e4ebf5 100%);
+            color: #1c1f26;
+        }
+
+        body[data-theme='dark'] {
+            background: radial-gradient(circle at 20% 20%, #1f2a44, #0b101d 80%);
+            color: #eef4ff;
+        }
+
+        .card {
+            background: rgba(255, 255, 255, 0.78);
+            backdrop-filter: blur(16px);
+            padding: 2.5rem;
+            border-radius: var(--border-radius);
+            box-shadow: var(--shadow);
+            max-width: 640px;
+            width: min(90vw, 640px);
+            transition: background-color var(--transition-duration) ease, color var(--transition-duration) ease;
+        }
+
+        body[data-theme='dark'] .card {
+            background: rgba(17, 24, 39, 0.76);
+        }
+
+        h1 {
+            margin-top: 0;
+            font-size: clamp(1.75rem, 3vw, 2.4rem);
+        }
+
+        .status-grid {
+            display: grid;
+            gap: 1.5rem;
+            margin-top: 2rem;
+        }
+
+        .status-tile {
+            border-radius: 12px;
+            padding: 1.5rem;
+            background: rgba(255, 255, 255, 0.4);
+            transition: background-color var(--transition-duration) ease, color var(--transition-duration) ease;
+        }
+
+        body[data-theme='dark'] .status-tile {
+            background: rgba(37, 47, 69, 0.5);
+        }
+
+        .status-label {
+            text-transform: uppercase;
+            letter-spacing: 0.12em;
+            font-size: 0.78rem;
+            opacity: 0.7;
+        }
+
+        .status-value {
+            font-size: clamp(1.5rem, 4vw, 2.6rem);
+            font-weight: 600;
+            margin: 0.4rem 0 0;
+        }
+
+        .status-description {
+            margin: 0;
+            opacity: 0.72;
+            font-size: 0.95rem;
+        }
+
+        .connection-dot {
+            display: inline-block;
+            width: 0.75rem;
+            height: 0.75rem;
+            margin-right: 0.35rem;
+            border-radius: 50%;
+            background-color: #f87171;
+            transition: background-color var(--transition-duration) ease;
+        }
+
+        .connection-dot.is-online {
+            background-color: #4ade80;
+        }
+
+        .subtitle {
+            margin: 0;
+            opacity: 0.68;
+            font-size: 0.95rem;
+        }
+
+        footer {
+            margin-top: 2.5rem;
+            font-size: 0.85rem;
+            opacity: 0.7;
+        }
+
+        a {
+            color: inherit;
+        }
+    </style>
 </head>
-<body>
-    <h1>Sensor Dashboard</h1>
+<body data-theme="light">
+    <main class="card">
+        <header>
+            <h1>Sensor Dashboard</h1>
+            <p class="subtitle"><span id="mqtt-status" class="connection-dot" aria-hidden="true"></span><span id="mqtt-status-text">Warte auf Verbindung zum MQTT-Broker…</span></p>
+        </header>
+        <section class="status-grid">
+            <article class="status-tile" aria-live="polite">
+                <span class="status-label">Aktuelle Umgebungshelligkeit</span>
+                <p class="status-value"><span id="lux-value">--</span> lx</p>
+                <p class="status-description" id="mode-description">Der Light Mode ist aktiv.</p>
+            </article>
+            <article class="status-tile">
+                <span class="status-label">Zuletzt empfangen</span>
+                <p class="status-value" id="last-update">--</p>
+                <p class="status-description">Datenquelle: BH1750 → MQTT → Prometheus → Grafana → Web-UI</p>
+            </article>
+        </section>
+        <footer>
+            <p>Visualisiert basierend auf den Prometheus-Metriken und dem MQTT-Stream. <a href="#" id="open-grafana" rel="noreferrer">In Grafana ansehen</a></p>
+        </footer>
+    </main>
+
     <script src="mqtt.min.js"></script>
     <script>
-        const broker = `ws://${window.location.host}:9001`;
+        const broker = `ws://${window.location.hostname}:9001`;
         const mqttClient = mqtt.connect(broker);
+        const LIGHT_TOPIC_SUFFIX = '/light';
+        const LIGHT_THRESHOLD = 150;
+
+        const luxElement = document.getElementById('lux-value');
+        const lastUpdateElement = document.getElementById('last-update');
+        const mqttStatus = document.getElementById('mqtt-status');
+        const mqttStatusText = document.getElementById('mqtt-status-text');
+        const modeDescription = document.getElementById('mode-description');
+        const grafanaLink = document.getElementById('open-grafana');
+        const root = document.body;
+
+        function formatDate(date) {
+            return date.toLocaleString(undefined, {
+                hour: '2-digit',
+                minute: '2-digit',
+                second: '2-digit'
+            });
+        }
+
+        function applyThemeFromLux(lux) {
+            if (!Number.isFinite(lux)) {
+                return;
+            }
+
+            const theme = lux < LIGHT_THRESHOLD ? 'dark' : 'light';
+            root.dataset.theme = theme;
+            luxElement.textContent = lux.toFixed(1);
+            const description = theme === 'dark'
+                ? 'Der Dark Mode sorgt für angenehme Bedienung bei wenig Licht.'
+                : 'Der Light Mode nutzt die volle Helligkeit der Umgebung.';
+            modeDescription.textContent = description;
+        }
+
+        function updateConnectionState(isOnline) {
+            mqttStatus.classList.toggle('is-online', isOnline);
+            mqttStatusText.textContent = isOnline
+                ? 'Mit dem MQTT-Broker verbunden'
+                : 'Warte auf Verbindung zum MQTT-Broker…';
+        }
+
+        function handleLightMessage(message) {
+            const lux = Number.parseFloat(message.toString());
+            if (Number.isNaN(lux)) {
+                return;
+            }
+
+            applyThemeFromLux(lux);
+            lastUpdateElement.textContent = formatDate(new Date());
+        }
 
         mqttClient.on('connect', () => {
-            console.log('Connected to MQTT broker');
+            updateConnectionState(true);
             mqttClient.subscribe('mondaymorning/sensors/#', (err) => {
-                if (!err) {
-                    console.log('Subscribed to sensor topics');
+                if (err) {
+                    console.error('Subscription failed', err);
                 }
             });
         });
 
+        mqttClient.on('reconnect', () => updateConnectionState(false));
+        mqttClient.on('close', () => updateConnectionState(false));
+
         mqttClient.on('message', (topic, message) => {
-            console.log(`Topic: ${topic}, Message: ${message.toString()}`);
-            // Here you can add code to update the dashboard with the received data
+            if (topic.endsWith(LIGHT_TOPIC_SUFFIX)) {
+                handleLightMessage(message);
+            }
         });
+
+        grafanaLink.addEventListener('click', (event) => {
+            event.preventDefault();
+            const grafanaUrl = `${window.location.protocol}//${window.location.hostname}:3000`;
+            window.open(grafanaUrl, '_blank', 'noopener');
+        });
+
+        async function hydrateFromApi() {
+            try {
+                const response = await fetch(`${window.location.protocol}//${window.location.hostname}:8080/`);
+                if (!response.ok) {
+                    throw new Error(`API responded with status ${response.status}`);
+                }
+                const data = await response.json();
+                if (typeof data.light === 'number') {
+                    applyThemeFromLux(data.light);
+                }
+                if (data.light !== undefined) {
+                    lastUpdateElement.textContent = formatDate(new Date());
+                }
+            } catch (error) {
+                console.warn('Konnte Initialdaten nicht abrufen:', error);
+            }
+        }
+
+        hydrateFromApi();
     </script>
 </body>
 </html>
